fix(frontend): Reduce z-index of modal-container from 3000 to 2000

--- a/frontend/src/scss/global.scss
+++ b/frontend/src/scss/global.scss
@@ -94,5 +94,5 @@ h5 {
 }
 
 .modal-container {
-    z-index: 3000;
+    z-index: 2000;
 }
